--- a/user-profile-service.yml
+++ b/user-profile-service.yml
@@ -15,32 +15,34 @@ feign:
         connectTimeout: '5000'
         loggerLevel:
 spring:
+  sql:
+    init:
+      mode: always
   datasource:
-   # url: jdbc:h2:file:/skillstracker;AUTO_SERVER=TRUE
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/skillstracker2
     username: root
     password: pass
-
   jpa:
     defer-datasource-initialization: false
-    show-sql: true
     generate-ddl: on
+    show-sql: true
   properties:
     hibernate:
+      format_sql: true
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
       ddl-auto: create-drop
-#  h2:
-#    console:
-#      enabled: true
-#      # default
-#      path: /h2-console
-#      #path: /h2-ui
-#      settings:
-#        web-allow-others: true
 
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   logging:
     pattern:
       console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
     level:
-      root: TRACE
+      root: INFO
+logging:
+  level:
+    org:
+      springframework:
+        web: INFO
