--- a/skills-service.yml
+++ b/skills-service.yml
@@ -15,24 +15,33 @@ feign:
         readTimeout: 5000
         loggerLevel: basic
 spring:
+  sql:
+    init:
+      mode: always
   datasource:
-    # url: jdbc:h2:file:/skillstracker;AUTO_SERVER=TRUE
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/skillstracker2
     username: root
     password: pass
-
   jpa:
     defer-datasource-initialization: false
-    show-sql: true
     generate-ddl: on
+    show-sql: true
   properties:
     hibernate:
+      format_sql: true
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
       ddl-auto: create-drop
-
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   logging:
     pattern:
       console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
     level:
       root: TRACE
+logging:
+  level:
+    org:
+      springframework:
+        web: TRACE
