--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -3,6 +3,13 @@ server:
 spring:
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods:
+            - GET
+            - POST
       discovery:
         locator:
           enabled: true  # default false
