--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -3,13 +3,14 @@ server:
 spring:
   cloud:
     gateway:
+     default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins: "*"
-            allowedMethods:
-            - GET
-            - POST
+              allowedOrigins: "*"
+              allowedMethods: "*"
+              allowedHeaders: "*"
       discovery:
         locator:
           enabled: true  # default false
