--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -3,6 +3,8 @@ server:
 spring:
   cloud:
     gateway:
+     default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
       discovery:
         locator:
           enabled: true  # default false
