--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -5,6 +5,12 @@ spring:
     gateway:
      default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+              allowedOrigins: "*"
+              allowedMethods: "*"
+              allowedHeaders: "*"
       discovery:
         locator:
           enabled: true  # default false
