--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -3,24 +3,20 @@ server:
 spring:
   cloud:
     gateway:
-     default-filters:
-        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
-      globalcors:
-        corsConfigurations:
-          '[/**]':
-              allowedOrigins: "*"
-              allowedMethods: "*"
-              allowedHeaders: "*"
       discovery:
         locator:
           enabled: true  # default false
       routes:
         - id: user-profile-service-route
           uri: lb://USER-PROFILE-SERVICE
+          filters:
+          - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
           predicates:
             - Path=/api/profiles/**
         - id: admin-service-route
           uri: lb://ADMIN-SERVICE
+          filters:
+          - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
           predicates:
             - Path=/api/admin/**
         - id: openapi
